testsuite/tests/saks/should_fail/T16722.stderr

T16722.hs:8:11: error:
    Unexpected kind variable ‘k’
    Perhaps you intended to use PolyKinds
    In the standalone kind signature for D
